--- a/mon-appli/pom.xml
+++ b/mon-appli/pom.xml
@@ -1,47 +1,80 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <!-- =============================================================== -->
-    <!-- Informations du projet -->
-    <!-- =============================================================== -->
-    <!-- ===== Informations Maven ===== -->
-    <groupId>org.exemple.demo</groupId>
-    <artifactId>mon-appli</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+	<!-- =============================================================== -->
+	<!-- Informations du projet -->
+	<!-- =============================================================== -->
+	<!-- ===== Informations Maven ===== -->
+	<groupId>org.exemple.demo</groupId>
+	<artifactId>mon-appli</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
-    <!-- ===== Informations générales ===== -->
-    <name>Mon Application</name>
-    <description>
-        La super application qui sert à faire ceci/cela...
-    </description>
-    <url>http://www.exemple.org/mon-appli</url>
+	<!-- ===== Informations générales ===== -->
+	<name>Mon Application</name>
+	<description>
+		La super application qui sert à faire ceci/cela...
+	</description>
+	<url>http://www.exemple.org/mon-appli</url>
 
-    <!-- ===== Organisation ===== -->
-    <organization>
-        <name>Mon Entreprise</name>
-        <url>http://www.exemple.org</url>
-    </organization>
+	<!-- ===== Organisation ===== -->
+	<organization>
+		<name>Mon Entreprise</name>
+		<url>http://www.exemple.org</url>
+	</organization>
 
-    <!-- ===== Licences ===== -->
-    <licenses>
-        <license>
-            <name>Apache License, Version 2.0</name>
-            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
-        </license>
-    </licenses>
+	<!-- ===== Licences ===== -->
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+		</license>
+	</licenses>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+
+	<!-- =============================================================== -->
+	<!-- Build -->
+	<!-- =============================================================== -->
+	<build>
+		<!-- Gestion des plugins (version) -->
+		<pluginManagement>
+			<plugins>
+				<!-- Plugin responsable de la génération du fichier JAR -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-jar-plugin</artifactId>
+					<version>3.0.2</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<!-- Création du Manifest pour la définition de la
+						classe Main -->
+						<manifest>
+							<mainClass>org.exemple.demo.App</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
