--- a/mon-appli/pom.xml
+++ b/mon-appli/pom.xml
@@ -9,7 +9,7 @@
 	<!-- ===== Informations Maven ===== -->
 	<groupId>org.exemple.demo</groupId>
 	<artifactId>mon-appli</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>2.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<!-- ===== Informations générales ===== -->
@@ -46,6 +46,36 @@
 		</dependency>
 	</dependencies>
 
+    <!-- =============================================================== -->
+    <!-- Profils -->
+    <!-- =============================================================== -->
+    <profiles>
+        <!-- Profil pour l'environnement de test -->
+        <profile>
+            <id>test</id>
+            <build>
+                <resources>
+                    <resource>
+                        <directory>src/main/resources/conf-test</directory>
+                        <filtering>true</filtering>
+                    </resource>
+                </resources>
+            </build>
+        </profile>
+        <!-- Profil pour l'environnement de production -->
+        <profile>
+            <id>prod</id>
+            <build>
+                <resources>
+                    <resource>
+                        <directory>src/main/resources/conf-prod</directory>
+                        <filtering>true</filtering>
+                    </resource>
+                </resources>
+            </build>
+        </profile>
+    </profiles>
+    
 	<!-- =============================================================== -->
 	<!-- Build -->
 	<!-- =============================================================== -->
